src/test/ui/variance-unused-type-param.stderr
error[E0392]: parameter `A` is never used
  --> $DIR/variance-unused-type-param.rs:16:19: in struct SomeStruct
   |
LL | struct SomeStruct<A> { x: u32 }
   |                   ^ unused type parameter
   |
   = help: consider removing `A` or using a marker such as `std::marker::PhantomData`

error[E0392]: parameter `A` is never used
  --> $DIR/variance-unused-type-param.rs:19:15: in enum SomeEnum
   |
LL | enum SomeEnum<A> { Nothing }
   |               ^ unused type parameter
   |
   = help: consider removing `A` or using a marker such as `std::marker::PhantomData`

error[E0392]: parameter `T` is never used
  --> $DIR/variance-unused-type-param.rs:23:15: in enum ListCell
   |
LL | enum ListCell<T> {
   |               ^ unused type parameter
   |
   = help: consider removing `T` or using a marker such as `std::marker::PhantomData`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0392`.
